syntax = "proto3";

package com.anzop.evCharger;

import "google/protobuf/timestamp.proto";

message EventSessionProto {
  string sessionId = 1;
  string rfidTag = 2;
  google.protobuf.Timestamp periodStart = 3;
  google.protobuf.Timestamp periodEnd = 4;
  double powerConsumption = 5;
}

message ChargingEventProto {
  string initiator = 1;
  string outletId = 2;
  string outletState = 3;
  EventSessionProto recentSession = 4;
}